Login Design in constraint layout done

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorRed">#FF0000</color>
     <color name="transparent">#00000000</color>
+    <color name="border">#FF0000FF</color>
 </resources>
