--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,68 +5,140 @@
 <!--android:layout_height="match_parent"-->
 <!--android:background="@color/colorBackground">-->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="730dp"
+    android:layout_height="match_parent"
     android:background="@color/colorBackground"
     tools:context=".activities.Login">
 
     <ImageView
+        android:id="@+id/main_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/login_polygon" />
+        android:src="@drawable/login_background" />
 
-    <!--<LinearLayout-->
-        <!--android:orientation="vertical"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginTop="280dp">-->
+    <ImageView
+        android:id="@+id/upper_poly"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignTop="@+id/main_background"
+        android:src="@drawable/login_upper_poly"/>
 
-        <!--<LinearLayout-->
-            <!--android:orientation="horizontal"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content">-->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/upper_poly"
+        android:layout_alignTop="@+id/upper_poly"
+        android:layout_alignEnd="@+id/upper_poly"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="280dp"
+        android:orientation="vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-            <!--<ImageView-->
-                <!--android:layout_marginTop="8dp"-->
-                <!--android:layout_width="40dp"-->
-                <!--android:layout_height="40dp"-->
-                <!--android:src="@drawable/ic_username" />-->
+        <android.support.design.widget.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="300dp"
+            android:layout_height="60dp">
 
-            <!--<EditText-->
-                <!--android:layout_width="220sp"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:hint="Username"-->
-                <!--android:background="@color/colorWhite"-->
-                <!--android:textSize="30sp"/>-->
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Username"
+                android:maxLines="1"
+                android:textSize="20sp" />
+        </android.support.design.widget.TextInputLayout>
 
-        <!--</LinearLayout>-->
+        <android.support.design.widget.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="10dp">
 
-        <!--<LinearLayout-->
-            <!--android:orientation="horizontal"-->
-            <!--android:layout_marginTop="5dp"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content">-->
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Password"
+                android:inputType="text"
+                android:maxLines="1"
+                android:textSize="20sp" />
+        </android.support.design.widget.TextInputLayout>
 
-            <!--<ImageView-->
-                <!--android:layout_marginTop="8dp"-->
-                <!--android:layout_width="40dp"-->
-                <!--android:layout_height="40dp"-->
-                <!--android:src="@drawable/ic_password" />-->
+    </LinearLayout>
 
-            <!--<EditText-->
-                <!--android:layout_width="220sp"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:hint="Password"-->
-                <!--android:background="@color/colorWhite"-->
-                <!--android:textSize="30sp"/>-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/upper_poly"
+        android:layout_alignEnd="@+id/upper_poly"
+        android:layout_marginStart="230dp"
+        android:layout_marginTop="420dp"
+        android:text="Forgot?"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <!--</LinearLayout>-->
+    <Button
+        android:layout_width="150dp"
+        android:layout_height="45dp"
+        android:layout_alignStart="@+id/upper_poly"
+        android:layout_alignTop="@+id/upper_poly"
+        android:layout_alignEnd="@+id/upper_poly"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="460dp"
+        android:background="@drawable/button_signin"
+        android:text="Sign in"
+        android:textColor="#FFFFFF"
+        android:textSize="25sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <!--</LinearLayout>-->
+    <ImageButton
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignStart="@+id/upper_poly"
+        android:layout_alignTop="@+id/upper_poly"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="510dp"
+        android:background="@color/transparent"
+        android:src="@drawable/ic_facebook"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageButton
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignStart="@+id/upper_poly"
+        android:layout_alignTop="@+id/upper_poly"
+        android:layout_marginStart="180dp"
+        android:layout_marginTop="550dp"
+        android:background="@color/transparent"
+        android:src="@drawable/login_google"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</RelativeLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="670dp"
+        android:text="Register"
+        android:textSize="32sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="180dp"
+        android:layout_marginTop="670dp"
+        android:background="@color/transparent"
+        android:src="@drawable/login_circle_right"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+</android.support.constraint.ConstraintLayout>
 
     <!--</ScrollView>-->
