--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,8 @@
 <!--android:layout_height="match_parent"-->
 <!--android:background="@color/colorBackground">-->
 
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -42,8 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.35"
-        app:layout_constraintGuide_begin="20dp" />
+        app:layout_constraintGuide_percent="0.35" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -70,7 +70,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/username"
                 android:maxLines="1"
-                android:textSize="20sp" />
+                android:textSize="18sp" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -85,7 +85,7 @@
                 android:hint="@string/password"
                 android:inputType="text"
                 android:maxLines="1"
-                android:textSize="20sp" />
+                android:textSize="18sp" />
         </android.support.design.widget.TextInputLayout>
 
     </LinearLayout>
@@ -96,11 +96,11 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/upper_poly"
         android:layout_alignEnd="@+id/upper_poly"
-        android:layout_marginStart="230dp"
+        android:layout_marginStart="290dp"
         android:layout_marginTop="160dp"
         android:layout_marginBottom="2dp"
         android:text="@string/forgot"
-        android:textSize="20sp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline5" />
@@ -112,8 +112,8 @@
         android:layout_alignStart="@+id/upper_poly"
         android:layout_alignTop="@+id/upper_poly"
         android:layout_alignEnd="@+id/upper_poly"
-        android:layout_marginStart="190dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="220dp"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="13dp"
         android:background="@drawable/button_signin"
         android:text="@string/sign_in"
@@ -135,7 +135,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
     <ImageButton
-        android:id="@+id/fbButton"
+        android:id="@+id/googleButton"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_alignStart="@+id/upper_poly"
@@ -143,23 +143,23 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="10dp"
         android:background="@color/transparent"
-        android:src="@drawable/ic_facebook"
+        android:src="@drawable/login_google"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
     <ImageButton
-        android:id="@+id/googleButton"
-        android:layout_width="100dp"
+        android:id="@+id/fbbutton"
+        android:layout_width="80dp"
         android:layout_height="100dp"
         android:layout_alignStart="@+id/upper_poly"
         android:layout_alignTop="@+id/upper_poly"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="120dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginEnd="110dp"
         android:background="@color/transparent"
-        android:src="@drawable/login_google"
+        android:src="@drawable/ic_facebook"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/fbButton"
+        app:layout_constraintStart_toEndOf="@+id/googleButton"
         app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
     <android.support.constraint.Guideline
@@ -174,12 +174,12 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="170dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="12dp"
         android:text="@string/register"
-        android:textSize="32sp"
+        android:textSize="28sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toStartOf="@+id/imageButton2"
         app:layout_constraintHorizontal_bias="1.0"
@@ -190,7 +190,7 @@
         android:id="@+id/imageButton2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="188dp"
+        android:layout_marginStart="168dp"
         android:layout_marginTop="170dp"
         android:layout_marginBottom="10dp"
         android:background="@color/transparent"
@@ -204,7 +204,7 @@
         android:rotation="90"
         android:layout_width="28dp"
         android:layout_height="28dp"
-        android:layout_marginStart="194dp"
+        android:layout_marginStart="174dp"
         android:layout_marginTop="170dp"
         android:layout_marginBottom="10dp"
         android:src="@drawable/ic_arrow_pointing_to_right"
