--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,9 +11,11 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/home_recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="400dp"
+        android:layout_marginTop="100dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:foregroundGravity="center"
+        android:overScrollMode="never"
+        android:clipToPadding="false"/>
 
 </android.support.constraint.ConstraintLayout>
