--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,4 +18,23 @@
         android:overScrollMode="never"
         android:clipToPadding="false"/>
 
+    <android.support.v7.widget.AppCompatImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_hamburger"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="180dp"
+        android:onClick="hamburgerclicked"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+    <!--android.support.design.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+        <include layout="@layout/hamburgerbottomsheet"/>
+    </android.support.design.widget.CoordinatorLayout-->
+
 </android.support.constraint.ConstraintLayout>
